--- a/res/layout/activity_view_students.xml
+++ b/res/layout/activity_view_students.xml
@@ -2,50 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
-  
     android:background="#E8F2FE"
     android:orientation="vertical" >
 
-    <RadioButton
-        android:id="@+id/radioButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:padding="10dp"
-        android:text="Praveen"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
-    <RadioButton
-        android:id="@+id/radioButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:text="Rahul"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
-    <RadioButton
-        android:id="@+id/radioButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:text="Pradeep"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.9" />
 
     <Button
         android:id="@+id/viewstdnt_back_button"
         android:layout_width="150dp"
-        android:layout_height="70dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="40dp"
         android:background="@drawable/background_button"
-        android:padding="10dp"
+        android:padding="5dp"
         android:text="Back"
         android:textColor="@android:color/white"
-        android:textSize="30dp" />
+        android:textSize="20dp" />
 
 </LinearLayout>
