--- a/res/layout/activity_personal_details.xml
+++ b/res/layout/activity_personal_details.xml
@@ -22,16 +22,14 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <EditText
+            <TextView
                 android:id="@+id/pd_fn"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:background="@drawable/group_top_black"
-                android:ems="1" >
+                android:text="hi" >
 
-                <requestFocus />
-            </EditText>
+            </TextView>
         </TableRow>
 
         <TableRow
@@ -46,12 +44,12 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <EditText
+         <TextView
                 android:id="@+id/pd_ln"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:background="@drawable/group_top_black" />
+                />
         </TableRow>
 
         <TableRow
@@ -66,12 +64,18 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <EditText
+            <TextView
                 android:id="@+id/pd_dob"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
-                android:background="@drawable/group_top_black" />
+                 />
+            <TextView
+                android:id="@+id/pd_gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                 />
         </TableRow>
 
         <TableRow
@@ -86,20 +90,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <RadioButton
-                android:id="@+id/pd_male"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:text="male" />
-
-            <RadioButton
-                android:id="@+id/pd_female"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:text="female"
-                android:textStyle="bold" />
+           
         </TableRow>
 
         <TableRow
@@ -190,7 +181,7 @@
             android:textColor="@android:color/white"
             android:background="@drawable/background_button"
             android:text="Delete"
-            
+            android:visibility="gone"
             android:textSize="20sp"
             android:textStyle="bold" />
         
@@ -201,6 +192,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_weight="0.4"
+            
             android:textColor="@android:color/white"
             android:background="@drawable/background_button"
             android:text="Back"
